--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <section id="about">
                 <h1>ABOUT ME</h1>
                 <img src="img/ja.jpg" alt="ja"/>
-                <p>My name is Lazar Petrovic and I am an aspiring web designer/developer and programmer, and an amateur game developer and video editor on the side. Computers have been my passion since a very young age. I hail from the small town of Obrenovac, Serbia and am currently enrolled in the first year of ICT College of Information Technologies.<br/>Index: <i class="important">125/19</i></p>
+                <p>My name is Lazar Petrovic and I am an aspiring web designer/developer and programmer, and an amateur game developer and video editor on the side. Computers have been my passion since a very young age. I'm from Serbia and am currently enrolled in the first year of ICT College of Information Technologies.<br/>Index: <i class="important">125/19</i></p>
             </section>
         </section>
         <footer>
